force-app/main/default/objects/Army__c/Army__c.object-meta.xml
<CustomObject>
    <label>Army</label>
    <pluralLabel>Armys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Army Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>