force-app/main/default/objects/Army__c/fields/Base__c.field-meta.xml
<CustomField>
    <fullName>Base__c</fullName>
    <label>Base</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>