force-app/main/default/objects/Army__c/fields/Dig_in__c.field-meta.xml
<CustomField>
    <fullName>Dig_in__c</fullName>
    <label>Dig in</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>