force-app/main/default/objects/Army__c/fields/Movement_progress__c.field-meta.xml
<CustomField>
    <fullName>Movement_progress__c</fullName>
    <label>Movement progress</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>