force-app/main/default/objects/Army__c/fields/Previous__c.field-meta.xml
<CustomField>
    <fullName>Previous__c</fullName>
    <label>Previous</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>