force-app/main/default/objects/Army__c/fields/Regiment__c.field-meta.xml
<CustomField>
    <fullName>Regiment__c</fullName>
    <label>Regiment</label>
    <type>Lookup</type>
    <referenceTo>Regiment__c</referenceTo>
    <relationshipName>Army_Regiment</relationshipName>
</CustomField>