force-app/main/default/objects/Army__c/fields/Supplies__c.field-meta.xml
<CustomField>
    <fullName>Supplies__c</fullName>
    <label>Supplies</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>