force-app/main/default/objects/Army__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <label>Target</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>